CAPITA/cloudformation/customer-account/resources/security-groups.template
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "AD Security Group",
    "Parameters": {
        "pVpcId": {
            "Type": "String",
            "Description": "Id of the VPC to deploy into"
        },
        "pADSecurityGroupName": {
            "Type": "String",
            "Description": "Name of security group"
        },
        "pTaggingGroup": {
            "Type": "String",
            "Description": "Tag for solution"
        }
    },
    "Resources": {

        "sgCmnAd": {
            "Type": "AWS::EC2::SecurityGroup",
            "Metadata": {
                "Description": "VPC wide security group. Controls access to all ENI's"
            },
            "Properties": {
                "GroupDescription": "CAPITA Active Directory Security Group",
                "VpcId": {
                    "Ref": "pVpcId"
                },
                "Tags": [{
                    "Key": "Name",
                    "Value": {
                        "Ref": "pADSecurityGroupName"
                    }
                },
                {
                    "Key": "Group",
                    "Value": {
                        "Ref": "pTaggingGroup"
                    }
                }],
                "SecurityGroupEgress": [{
                    "IpProtocol": "-1",
                    "CidrIp": "0.0.0.0/0"
                }],

                "SecurityGroupIngress": [{
                        "CidrIp": "10.181.3.4/28",
                        "Description": "DNS TCP",
                        "ToPort": 53,
                        "FromPort": 53,
                        "IpProtocol": "tcp"
                    },
                    {
                        "CidrIp": "10.181.3.4/28",
                        "Description": "DNS UDP",
                        "ToPort": 53,
                        "FromPort": 53,
                        "IpProtocol": "udp"
                    },
                    {
                        "CidrIp": "10.181.3.4/28",
                        "Description": "Kerberos authentication TCP",
                        "ToPort": 88,
                        "FromPort": 88,
                        "IpProtocol": "tcp"
                    },
                    {
                        "CidrIp": "10.181.3.4/28",
                        "Description": "Kerberos authentication UDP",
                        "ToPort": 88,
                        "FromPort": 88,
                        "IpProtocol": "udp"
                    },
                    {
                        "CidrIp": "10.181.3.4/28",
                        "Description": "NTP",
                        "ToPort": 123,
                        "FromPort": 123,
                        "IpProtocol": "udp"
                    },
                    {
                        "CidrIp": "10.181.3.4/28",
                        "Description": "RPC",
                        "ToPort": 135,
                        "FromPort": 135,
                        "IpProtocol": "tcp"
                    },
                    {
                        "CidrIp": "10.181.3.4/28",
                        "Description": "Netlogon UDP",
                        "ToPort": 138,
                        "FromPort": 137,
                        "IpProtocol": "udp"
                    },
                    {
                        "CidrIp": "10.181.3.4/28",
                        "Description": "Netlogon TCP",
                        "ToPort": 139,
                        "FromPort": 139,
                        "IpProtocol": "tcp"
                    },
                    {
                        "CidrIp": "10.181.3.4/28",
                        "Description": "LDAP TCP",
                        "ToPort": 389,
                        "FromPort": 389,
                        "IpProtocol": "tcp"
                    },
                    {
                        "CidrIp": "10.181.3.4/28",
                        "Description": "LDAP UDP",
                        "ToPort": 389,
                        "FromPort": 389,
                        "IpProtocol": "udp"
                    },
                    {
                        "CidrIp": "10.181.3.4/28",
                        "Description": "SMB TCP",
                        "ToPort": 445,
                        "FromPort": 445,
                        "IpProtocol": "tcp"
                    },
                    {
                        "CidrIp": "10.181.3.4/28",
                        "Description": "SMB UDP",
                        "ToPort": 445,
                        "FromPort": 445,
                        "IpProtocol": "udp"
                    },
                    {
                        "CidrIp": "10.181.3.4/28",
                        "Description": "LDAPS",
                        "ToPort": 636,
                        "FromPort": 636,
                        "IpProtocol": "tcp"
                    },
                    {
                        "CidrIp": "10.181.3.4/28",
                        "Description": "Rsync",
                        "ToPort": 873,
                        "FromPort": 873,
                        "IpProtocol": "tcp"
                    },
                    {
                        "CidrIp": "10.181.3.4/28",
                        "Description": "Global Catalog",
                        "ToPort": 3268,
                        "FromPort": 3268,
                        "IpProtocol": "tcp"
                    },
                    {
                        "CidrIp": "10.181.3.4/28",
                        "Description": "Ephemeral ports for RPC TCP",
                        "ToPort": 65535,
                        "FromPort": 1024,
                        "IpProtocol": "tcp"
                    },
                    {
                        "CidrIp": "10.181.3.4/28",
                        "Description": "Ephemeral ports for RPC UDP",
                        "ToPort": 65535,
                        "FromPort": 1024,
                        "IpProtocol": "udp"
                    }
                ]

            }

        }
    },
    "Outputs": {}
}
